cats Napoleon's battle

--- a/indexBACKUP.html
+++ b/indexBACKUP.html
@@ -1,21 +1,34 @@
+
+
 <!doctype html>
 
 <html lang="en">
 
 <head>
     <!-- Google Tag Manager -->
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-114267362-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <script>
+        (function (w, d, s, l, i) {
+            w[l] = w[l] || [];
+            w[l].push({
+                'gtm.start': new Date().getTime(),
+                event: 'gtm.js'
+            });
+            var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s),
+                dl = l != 'dataLayer' ? '&l=' + l : '';
+            j.async = true;
+            j.src =
+                'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+            f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-53SZFWD');
+    </script>
+    <!-- End Google Tag Manager -->
 
-  gtag('config', 'UA-114267362-1');
-</script>
     <meta charset="utf-8" />
 
-    <title>_For_Cat_Eyes_Only_</title> 
+    <title>_For_Cat_Eyes_Only_</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114267362-1"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
 
@@ -30,8 +43,17 @@
     <script src="http://www.google.com/jsapi" type="text/javascript"></script>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
- 
-  
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114267362-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-114267362-1');
+    </script>
     <!-- calcule script-->
 
     <script type="text/javascript">
@@ -226,7 +248,7 @@
 
     </div>
 
-    <script src="dist/js/cats.bundle-september.js"></script>
+    <script src="dist/js/cats.bundle.js"></script>
     <!--endcontainer-->
     <!-- Go to www.addthis.com/dashboard to customize your tools -->
     <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5a89e0d5ca214cf7"></script>
