--- a/index.2.html
+++ b/index.2.html
@@ -4,18 +4,29 @@
 
 <head>
     <!-- Google Tag Manager -->
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-114267362-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <script>
+        (function (w, d, s, l, i) {
+            w[l] = w[l] || [];
+            w[l].push({
+                'gtm.start': new Date().getTime(),
+                event: 'gtm.js'
+            });
+            var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s),
+                dl = l != 'dataLayer' ? '&l=' + l : '';
+            j.async = true;
+            j.src =
+                'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+            f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-53SZFWD');
+    </script>
+    <!-- End Google Tag Manager -->
 
-  gtag('config', 'UA-114267362-1');
-</script>
     <meta charset="utf-8" />
 
-    <title>_For_Cat_Eyes_Only_</title> 
+    <title>_For_Cat_Eyes_Only_</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114267362-1"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
 
@@ -30,8 +41,17 @@
     <script src="http://www.google.com/jsapi" type="text/javascript"></script>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
- 
-  
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114267362-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-114267362-1');
+    </script>
     <!-- calcule script-->
 
     <script type="text/javascript">
@@ -52,83 +72,11 @@
     <h5 class="tmm_bck" id="tmm_bck">
         <a href="../index.html">... &nbsp; back &nbsp; to &nbsp; OUR &nbsp; DAILY TECH</a>
     </h5>
- 
-    <style>
-    
-.kcbb-ears {
-    opacity: .1;
-    font-family: "courier new", courier, monospace;
-    float: left;
-    
-    width: 0; 
-    height: 0; 
-    border-left: 75px solid transparent;
-    border-right: 75px solid transparent; 
-    border-bottom: 75px solid orange;
-}
-#kcbb-ears1 {
-   
-    min-width: 30%;
-    position: fixed;
-    top: 15px; 
 
-}
-
-#kcbb-ears1:hover {
-    box-shadow: 0px 10px 50px #ff87074c;
-}
-
-#kcbb-ears1:after {
-    content: "FICTION " ;
-}
-
-#kcbb-ears1:before {
-    content: url("dist/txt/kcbb-ears.txt");
-}
-
-#kcbb-ears2 {
-    position: fixed;
-    top: 22px;
-    left: 60%;
-    float: right;
-    box-shadow: 0px 10px 50px #ff8707dc;
-    min-width: 30%; 
-}
-
-#kcbb-ears2:hover {
-    box-shadow: 0px 10px 50px #ff87074c;
-}
-
-#kcbb-ears2:after {
-    content: " ACCOUNTS";
-}
-
-#kcbb-ears2:before {
-    content: url("dist/txt/kcbb-ears.txt");
-}
-
-.ears { 
-    text-align: justify;
-    font-size: 13;
-    float: right;
-    max-width: 100%;
- 
-}
- 
-
-    </style>
-    <div class="ears">
-    <div id="kcbb-ears1" class="kcbb-ears left"></div> 
-    <div id="kcbb-ears2" class="kcbb-ears right"></div> 
-</div>
-
-
-<div class="kcbb-eyes">
     <article id="kcbb1" class="kcbb">
     </article>
     <article id="kcbb2" class="kcbb">
     </article>
-</div>
     <!-- Google Tag Manager (noscript) -->
     <noscript>
         <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-53SZFWD" height="0" width="0" style="display:none;visibility:hidden"></iframe>
@@ -226,7 +174,7 @@
 
     </div>
 
-    <script src="dist/js/cats.bundle-september.js"></script>
+    <script src="dist/js/cats.bundle.js"></script>
     <!--endcontainer-->
     <!-- Go to www.addthis.com/dashboard to customize your tools -->
     <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5a89e0d5ca214cf7"></script>
